# OpenGL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
res/shader/: colorFragment.glsl  colorVertex.glsl  fragment.glsl  lightingFragment.glsl  lightingVertex.glsl  vertex.glsl
res/shaders/: shader.glsl
src/: application.cpp  camera.cpp  camera.h  glad.c  global.h  indexBuffer.cpp  indexBuffer.h  mesh.cpp  mesh.h  model.cpp  model.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  texture2D.cpp  texture2D.h  vertexArray.cpp  vertexArray.h  vertexBuffer.cpp  vertexBuffer.h  vertexBufferLayout.h  windowing.cpp  windowing.h
src/tests/: Test.h  TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h  Tests.cpp
